syntax = "proto3";

option java_multiple_files = true;
option java_package = "uulm.in.vs.ex4";

service Chat {
  rpc login (LoginRequest) returns (LoginResponse) {}
  rpc logout (LogoutRequest) returns (LogoutResponse) {}

  rpc chatStream(ClientMessage) returns (stream ChatMessages) {}
  rpc listUsers (GetUsersMessage) returns (UserInfoMessage) {}
}

enum StatusCode {
  OK = 0;
  FAILED = 1;
}

message LoginRequest {
  string username = 1;
}

message LoginResponse {
  StatusCode status = 1;
  string sessionID = 2;
}

message LogoutRequest {
  string username = 1;
  string sessionID = 2;
}

message LogoutResponse {
  StatusCode status = 1;
}

message ClientMessage {
  string username = 1;
  string message = 2;
}

message ChatMessages {
  string username = 1;
  string message = 2;
}

message GetUsersMessage {
  string username = 1;
  string sessionID = 2;
}

message UserInfoMessage {
  repeated string users = 1;
}

